--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -11,7 +11,7 @@ main{
         background-image: url(../media/conejito.jpeg);
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
+        background-attachment: scroll;
         display: grid;
         grid-template-areas:
         "p1 logo p2"
@@ -196,6 +196,7 @@ main{
 @media only screen and (min-width: 600px) and (max-width: 991px) {
     main{
         section.fotoPrincipal{
+            background-attachment: fixed;
             .fotoPrincipal__p1{
                 grid-area: p1;
                 @include fotoPrincipal_style(white, 3vw, bolder);
@@ -248,6 +249,7 @@ main{
 @media only screen and (min-width: 992px) {
     main{
         section.fotoPrincipal{
+            background-attachment: fixed;
             .fotoPrincipal__p1{
                 grid-area: p1;
                 @include fotoPrincipal_style(white, 2.5vw, bolder);
